--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Creating and Inserting DOM Elements</title>
+    <link src="index.js">
   </head>
   <script type="application/javascript">
   </script>
